<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gpb_document_background">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/pager"
            style="@style/GiniPay.DocumentPagerStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/indicator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            style="@style/GiniPay.DocumentListStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/payment_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/indicator"
            style="@style/GiniPay.PageIndicatorStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/gpb_tab_height"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/payment_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tabBackground="@drawable/gpb_tab_pager_selector"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp"
            app:tabMaxWidth="@dimen/gpb_tab_width"
            app:tabMode="fixed" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/payment_details"
            style="@style/GiniPay.PaymentDetailsCard"
            android:clipToPadding="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/recipient_layout"
                style="@style/GiniPay.PaymentInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/recipient"
                    style="@style/GiniPay.PaymentInputStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/gpb_recipient_hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/iban_layout"
                style="@style/GiniPay.PaymentInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gpb_input_spacing"
                android:layout_marginEnd="@dimen/gpb_input_spacing"
                app:layout_constraintEnd_toStartOf="@id/amount_layout"
                app:layout_constraintHorizontal_weight=".7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recipient_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/iban"
                    style="@style/GiniPay.PaymentInputStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/gpb_iban_hint"
                    android:nextFocusDown="@id/amount" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/amount_layout"
                style="@style/GiniPay.PaymentInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gpb_input_spacing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight=".3"
                app:layout_constraintStart_toEndOf="@id/iban_layout"
                app:layout_constraintTop_toBottomOf="@id/recipient_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/amount"
                    style="@style/GiniPay.PaymentInputStyle.Amount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/gpb_amount_hint"
                    android:digits="0123456789.,"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/currency"
                style="@style/GiniPay.CurrencyStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="€"
                app:layout_constraintEnd_toEndOf="@id/amount_layout"
                app:layout_constraintTop_toTopOf="@id/amount_layout"
                tools:ignore="HardcodedText" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/iban_amount_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="iban_layout,amount_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/purpose_layout"
                style="@style/GiniPay.PaymentInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gpb_input_spacing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iban_amount_barrier">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/purpose"
                    style="@style/GiniPay.PaymentInputStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/gpb_purpose_hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/bank"
                style="@style/GiniPay.BankButtonStyle"
                android:text="@string/gpb_bank_placeholder"
                app:layout_constraintEnd_toStartOf="@id/payment"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/purpose_layout" />

            <Button
                android:id="@+id/payment"
                style="@style/GiniPay.PaymentButtonStyle"
                android:text="@string/gpb_pay_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/bank"
                app:layout_constraintTop_toBottomOf="@id/purpose_layout" />

            <ProgressBar
                android:id="@+id/payment_progress"
                style="@style/GiniPay.PaymentButtonProgressStyle"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@id/payment"
                app:layout_constraintEnd_toEndOf="@id/payment"
                app:layout_constraintStart_toStartOf="@id/payment"
                app:layout_constraintTop_toTopOf="@id/payment" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>